# GaianCalendar

./: .gitignore  README.md  claude.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
gaian_calendar/: __init__.py  _convert.py  _data.py  _format.py  date.py  month.py  weekday.py
planning/: 01_overview.md  02_calendar_rules.md  03_api_design.md  04_module_structure.md  05_packaging.md  06_test_cases.md
tests/: test_convert.py  test_date.py  test_format.py  test_month_weekday.py
